# Jinsei

./: .gitignore  Cargo.toml  dev.Cogitri.Jinsei.json  meson.build
data/: dev.Cogitri.Jinsei.appdata.xml.in  dev.Cogitri.Jinsei.desktop.in  dev.Cogitri.Jinsei.gresource.xml  dev.Cogitri.Jinsei.gschema.xml  meson.build
data/tracker/ontology/: meson.build
data/ui/: activity_add_dialog.ui  activity_row.ui  activity_type_row.ui  activity_type_selector.ui  activity_view.ui  bmi_level_bar.ui  date_editor.ui  distance_action_row.ui  preferences_window.ui  setup_window.ui  shortcuts_window.ui  step_view.ui  sync_list_box.ui  view.ui  weight_add_dialog.ui  weight_view.ui  window.ui
po/: POTFILES  meson.build
src/: config.rs  config.rs.in  jinsei.gresource.xml  main.rs  meson.build  window.rs  window.ui
src/core/: application.rs  database.rs  macros.rs  mod.rs  settings.rs  utils.rs
src/model/: activity.rs  activity_info.rs  activity_type_row_data.rs  graph_model.rs  graph_model_steps.rs  graph_model_weight.rs  mod.rs  model_activity.rs  steps_graph_model.rs  weight_graph_model.rs
src/views/: graph_view.rs  mod.rs  view.rs  view_activity.rs  view_steps.rs  view_weight.rs
src/widgets/: activity_row.rs  activity_type_row.rs  activity_type_selector.rs  bmi_level_bar.rs  date_selector.rs  distance_action_row.rs  mod.rs
src/windows/: mod.rs  preferences_window.rs  setup_window.rs  weight_add_dialog.rs  window.rs
