[package]
name = "Jinsei"
version = "0.1.0"
edition = "2018"

[dependencies.chrono]
version = "0.4"

[dependencies.paste]
version = "1.0"

[dependencies.gtk]
git = "https://github.com/gtk-rs/gtk4-rs"
package = "gtk4"

[dependencies.gio]
git = "https://github.com/gtk-rs/gtk-rs"
features = ["v2_60"]

[dependencies.glib]
git = "https://github.com/gtk-rs/gtk-rs"
features = ["v2_60"]

[dependencies.libadwaita]
git = "https://gitlab.gnome.org/bilelmoussaoui/libadwaita-rs"

[dependencies.gettext-rs]
version = "0.4.4"
features = ["gettext-system"]
